src/index.css
@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,600;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --milky-white: rgba(255, 255, 255, 0.8);
  --milky-black: rgba(13, 21, 28, 0.8);
  --light: rgb(255, 255, 255);
  --dark: #272829;
  --hero: #cccccc;
  --lowDark: #0e151b;
  --main: #0678e3;
  --lowwhite: #ddd;
}

* {
  box-sizing: border-box;
}

html {
  font-family: 'Noto Sans JP', sans-serif;
}

body {
  margin: 0;
  background-color: var(--light);
  color: var(--dark);
  height: 100vh;
  width: 100vw;
  overflow-x: hidden !important;
}

.darkMode {
  background-color: var(--dark) !important;
  color: var(--milky-white) !important;
  --hero: var(--dark) !important;
  --lowDark: var(--hero) !important;
  --milky-white: var(--milky-black) !important;
  --main: var(--lowwhite);
  --lowwhite: var(--main)
}

/*--------------------------------------------------------------
  .back-to-top
--------------------------------------------------------------*/

.scroll-to-top-button {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  background: #0563bb;
  opacity: 0;
  visibility: hidden;
  /* transition: all 0.4s; */
  transition: opacity 0.3s, visibility 0.3s;
}

scroll-to-top-button:hover {
  background: #728394;
  color: #fff;
}

.scroll-to-top-button.visible {
  opacity: 1;
  visibility: visible;
}

.active {
  background-color: #0678e3;
  color: #ffffff;
}

/**
* Desktop Navigation 
*/

.desktopNav {
  display: none;
  position: fixed;
  top: calc(100vh - 80%);
  left: 1rem;
  height: 60%;
  z-index: 30;
}

.desktopNav li {
  position: relative; 
}

.desktopNavList {
  transition: all 0.3s ease-out;
}

@media (min-width: 976px) {
  .desktopNav {
    display: block;
  }
}

@media (max-width: 1150px) {
  .desktopNav {
    top: 20%;
  }
}


/**
* Mobile Navigation 
*/

.mobileNav {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  z-index: 30;
  height: auto;
}

@keyframes navappears {
  from {
    opacity: 0;
    transform: translateX(3rem);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.mobileNav ul {
  position: relative;
  width: 100vw;
  margin: 0 auto;
  padding: 7% 14% 5% 10%;
  animation: navappears 1s ease-out forwards;
}

 .hamburger, .closeBtn {
  position: absolute;
  top: 2rem;
  z-index: 35;
  transform: scale(1);
}

.hamburger {
  left: 2rem;
}

 .closeBtn {
  right: 3rem;
}

.hamburger:hover, .closeBtn:hover {
  transform: scale(1.4);
}

.navLinks {
  z-index: 30;
}

.overlay {
  z-index: 10;
  position: fixed;
  top: 0;
  left:0;
}

@media (min-width: 976px) {
  .mobileNav  {
    display: none;
  }
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
.hero {
  background-image: url("./components/assets/images/hero-image.jpg");
  background-color: var(--hero);
  height: 100vh;
  width: 100vw;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  flex-direction: column;
  text-align: start;
  display: flex;
  justify-content: center;
  padding-left: 10%;
  padding-right: 10%;
}

.hero::before {
  content: "";
  background: var(--milky-white);
  height: 100vh;
  width: 100vw;
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
}

.hero-text {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
  text-align: start;
  /* color: var(--lowDark); */
  z-index: 10;
}

@media (min-width: 976px) {
  .hero {
    background-position: left center;
    padding-left: 25%;
  }
}

/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
.section {
  padding: 5% 10%;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 1rem;
}

.section-title-line-one {
  display: block;
  width: 40px;
  height: 3px;
  background: --main;
}

.section-title-line-two {
  display: block;
  width: 120px;
  height: 1px;
  background: --lowwhite;
}

@media (min-width: 976px) {
  .section {
    padding: 4% 2% 4% 10%;
  }
}

/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.scaleSkill {
  transform: scale(0.9);
}

.scaleSkill:hover {
  transform: scale(1.5);
}

/*--------------------------------------------------------------
# Portfolio
--------------------------------------------------------------*/

.portfolioImages {
  animation: portfolioappears 1s ease-out forwards;
}

@keyframes portfolioappears {
  from {
    opacity: 0;
    transform: translateY(3rem);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

